k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes-app
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: recipes
  template:
    metadata:
      labels:
        app: recipes
    spec:
      containers:
        - name: app
          image: eslamzain99/recipes_app:latest
          ports:
            - containerPort: 8000
