k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipes-svc
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: recipes
  ports:
    - port: 80
      targetPort: 5000
