k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipes-ingress
  namespace: prod
spec:
  rules:
    - host: recipes.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recipes-svc
                port:
                  number: 80
  # - host: www.ez-store.local
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: ez-store-service
  #           port:
  #             number: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-ingress
# spec:
#   rules:
#     - host: myapp.example.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend
#                 port:
#                   number: 80
#           - path: /api
#             pathType: Prefix
#             backend:
#               service:
#                 name: api
#                 port:
#                   number: 80
# ---
# rules:
#   - host: frontend.example.com
#     http:
#       paths:
#         - path: /
#           pathType: Prefix
#           backend:
#             service:
#               name: frontend
#               port:
#                 number: 80

#   - host: api.example.com
#     http:
#       paths:
#         - path: /
#           pathType: Prefix
#           backend:
#             service:
#               name: api
#               port:
#                 number: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: multi-service-ingress
# spec:
#   rules:
#     - host: service1.example.com
#       http:
#         paths:
#           - path: /
